Fixed favorites check
Fix:
  - Readded the loop that populated the user list with favorite movies in the application itself. This is used to check if a movie is already a favorite (in which case the button changes to remove)
  - I should probably git ignore the bin/obj folder already x)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 ~$scription.docx
 Description.docx
 Description.docx
+MovieLibrary.Api/obj/
+MovieLibrary.Api/bin/
+MovieLibrary.ApiSearch/obj/
+MovieLibrary.ApiSearch/bin/
+MovieLibrary.DbAccess/obj/
+MovieLibrary.DbAccess/bin/
+MovieLibrary.Model/obj/
+MovieLibrary.Model/bin/
+MovieLibraryApp/obj/
+MovieLibraryApp/bin/
+packages/
+.vs/
